# termprofiles

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  setup.py
src/termprofiles/: __init__.py  cli.py  doctor.py  mac.py  util.py  win.py
tests/: test_doctor.py
