[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termprofiles"
version = "0.1.3"
description = "Per-project terminal profiles for iTerm2 (macOS) and Windows Terminal (Windows), safely via per-file JSON."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["terminal", "iterm2", "windows terminal", "zsh", "profiles", "cli", "productivity"]
license = "MIT"
authors = [{name = "yaioyaio", email = "yaioyaio@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yaioyaio/termprofiles"
Repository = "https://github.com/yaioyaio/termprofiles"
Documentation = "https://github.com/yaioyaio/termprofiles#readme"
"Bug Tracker" = "https://github.com/yaioyaio/termprofiles/issues"
"Release Notes" = "https://github.com/yaioyaio/termprofiles/releases"

[project.scripts]
termprofiles = "termprofiles.cli:main"
